# scbdb

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PRD.md  PROJECT_FINDINGS_REPORT.md  README.md  REVIEW.md  brands.yaml  docker-compose.yml  extraction_prompt_schema.md  justfile  lefthook.yml  package.json  pnpm-lock.yaml
.cargo/: audit.toml
.full-review/: 00-scope.md  01-quality-architecture.md  02-security-performance.md  03-testing-documentation.md  04-best-practices.md  05-final-report.md  state.json
config/: brands.yaml
crates/scbdb-cli/: CLAUDE.md  Cargo.toml
crates/scbdb-cli/src/: collect.rs  main.rs  regs.rs  tests.rs
crates/scbdb-cli/src/collect/: brand.rs  brand_test.rs  collect_test.rs  mod.rs  runner.rs  verify_images.rs
crates/scbdb-cli/src/collect/brand/: core.rs  mod.rs  pipeline.rs
crates/scbdb-cli/src/collect/locations/: brand.rs  helpers.rs  mod.rs  url.rs
crates/scbdb-cli/src/regs/: discovery.rs  ingest.rs  mod.rs  query.rs
crates/scbdb-cli/src/sentiment/: mod.rs  query.rs
crates/scbdb-core/: CLAUDE.md  Cargo.toml
crates/scbdb-core/src/: app_config.rs  brands.rs  brands_test.rs  config.rs  config_test.rs  lib.rs  products.rs
crates/scbdb-db/: CLAUDE.md  Cargo.toml
crates/scbdb-db/src/: api_queries.rs  bill_events.rs  bill_texts.rs  bills.rs  brand_completeness.rs  brand_profiles.rs  brand_signals.rs  brands.rs  collection_runs.rs  lib.rs  locations.rs  products.rs  seed.rs  sentiment.rs
crates/scbdb-db/src/brand_intel/: competitor_relationships.rs  distributors.rs  funding_events.rs  lab_tests.rs  legal_proceedings.rs  media_appearances.rs  mod.rs  newsletters.rs  sponsorships.rs
crates/scbdb-db/src/locations/: mod.rs  read.rs  types.rs  write.rs
crates/scbdb-db/tests/: integration.rs  live.rs
crates/scbdb-legiscan/: CLAUDE.md  Cargo.toml
crates/scbdb-legiscan/src/: client.rs  client_test.rs  error.rs  lib.rs  normalize.rs  retry.rs  session.rs  types.rs
crates/scbdb-legiscan/tests/: client.rs
crates/scbdb-profiler/: CLAUDE.md  Cargo.toml
crates/scbdb-profiler/src/: embedder.rs  error.rs  intake.rs  lib.rs  rss.rs  twitter.rs  types.rs  youtube.rs
crates/scbdb-scraper/: CLAUDE.md  Cargo.toml
crates/scbdb-scraper/src/: client.rs  client_test.rs  error.rs  lib.rs  logo.rs  normalize.rs  normalize_test.rs  pagination.rs  parse.rs  parse_helpers.rs  parse_test.rs  rate_limit.rs  types.rs
crates/scbdb-scraper/src/client/: fetch_all.rs  mod.rs  origin.rs
crates/scbdb-scraper/src/locator/: fetch.rs  grid.rs  mod.rs  trust.rs  types.rs
crates/scbdb-scraper/src/locator/formats/: agile_store_locator.rs  askhoodie.rs  beveragefinder.rs  destini.rs  embed.rs  jsonld.rs  locally.rs  mod.rs  roseperl.rs  stockist.rs  storemapper.rs  storepoint.rs  storerocket.rs
crates/scbdb-scraper/src/locator/formats/destini/: mod.rs  parse.rs  response.rs
crates/scbdb-scraper/src/locator/formats/vtinfo/: mod.rs  vtinfo_http.rs  vtinfo_parse.rs
crates/scbdb-scraper/tests/: shopify_client.rs
crates/scbdb-sentiment/: CLAUDE.md  Cargo.toml
crates/scbdb-sentiment/src/: embeddings.rs  error.rs  lib.rs  pipeline.rs  scorer.rs  types.rs  vector_store.rs
crates/scbdb-sentiment/src/sources/: bing_rss.rs  brand_newsroom.rs  gdelt.rs  mod.rs  reddit.rs  reddit_helpers.rs  rss.rs  rss_helpers.rs  twitter.rs  yahoo_rss.rs  youtube_rss.rs
crates/scbdb-sentiment/src/sources/brand_newsroom/: html.rs  html_jsonld.rs  mod.rs  urls.rs
crates/scbdb-server/: CLAUDE.md  Cargo.toml
crates/scbdb-server/src/: main.rs  middleware.rs  scheduler.rs
crates/scbdb-server/src/api/: bills.rs  collection_runs.rs  locations.rs  mod.rs  pricing.rs  products.rs  sentiment.rs
crates/scbdb-server/src/api/brands/: detail.rs  list.rs  mod.rs  signals.rs  write.rs  write_enrichment.rs
crates/scbdb-server/src/api/brands/intel/: mod.rs  types.rs
crates/scbdb-server/src/scheduler/: brand_intel.rs  mod.rs
docs/: API_DESIGN.md  ARCHITECTURE.md  BRAND_INTELLIGENCE.md  CONFIG_LOADING.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEVELOPMENT.md  EXTRACTION_PROMPT_SCHEMA.md  INDEX.md  LOCATIONS_DASHBOARD.md  LOGGING.md  MVP.md  PRD.md  SENTIMENT_DASHBOARD.md  SENTIMENT_PIPELINE.md  STORE_LOCATOR.md  TECHNOLOGY.md  TESTING.md
migrations/: 20260219000100_initial_schema.down.sql  20260219000100_initial_schema.up.sql  20260219000200_phase2_schema.down.sql  20260219000200_phase2_schema.up.sql  20260219000300_products_source_url.down.sql  20260219000300_products_source_url.up.sql  20260219000400_bill_events_unique_constraint.down.sql  20260219000400_bill_events_unique_constraint.up.sql  20260219000500_product_variants_is_available_not_null.down.sql  20260219000500_product_variants_is_available_not_null.up.sql  20260220000600_sentiment_snapshots.up.sql  20260220000700_products_vendor.down.sql  20260220000700_products_vendor.up.sql  20260221000100_brands_logo_url.down.sql  20260221000100_brands_logo_url.up.sql  20260221000200_store_locator_url.down.sql  20260221000200_store_locator_url.up.sql  20260221000300_store_locations.down.sql  20260221000300_store_locations.up.sql  20260221000400_collection_run_brands_partial_status.down.sql  20260221000400_collection_run_brands_partial_status.up.sql  20260221000500_api_views.down.sql  20260221000500_api_views.up.sql  20260222000100_brand_profile_layer.down.sql  20260222000100_brand_profile_layer.up.sql  20260222000200_brand_signals.down.sql  20260222000200_brand_signals.up.sql  20260222000300_brand_structured_a.down.sql  20260222000300_brand_structured_a.up.sql  20260222000400_brand_structured_b.down.sql  20260222000400_brand_structured_b.up.sql  20260222000500_brand_profile_runs.down.sql  20260222000500_brand_profile_runs.up.sql  20260222000600_brands_twitter_handle.down.sql  20260222000600_brands_twitter_handle.up.sql  20260222000700_bill_texts_and_hash_cache.down.sql  20260222000700_bill_texts_and_hash_cache.up.sql  20260226000100_store_locator_url_comment.down.sql  20260226000100_store_locator_url_comment.up.sql  20260226000200_drop_redundant_store_locations_brand_index.down.sql  (+1 more)
scripts/: check-file-size.sh  (+4 more)
(+62 files in other folders)
