[workspace]
resolver = "2"
members = [
  "crates/scbdb-cli",
  "crates/scbdb-server",
  "crates/scbdb-core",
  "crates/scbdb-db",
  "crates/scbdb-scraper",
  "crates/scbdb-legiscan",
  "crates/scbdb-sentiment",
]

[workspace.package]
edition = "2021"
rust-version = "1.93"
license = "UNLICENSED"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rust_decimal = { version = "1", features = ["serde-with-str"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "rust_decimal", "migrate", "macros"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4", "serde"] }
wiremock = "0.6"
