[package]
name = "scbdb-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "scbdb-cli"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
scbdb-core = { path = "../scbdb-core" }
scbdb-db = { path = "../scbdb-db" }
scbdb-legiscan = { path = "../scbdb-legiscan" }
scbdb-scraper = { path = "../scbdb-scraper" }
scbdb-sentiment = { path = "../scbdb-sentiment" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
