[package]
name = "scbdb-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true
serde_yaml.workspace = true
dotenvy.workspace = true

[dev-dependencies]
serde_json.workspace = true
