[package]
name = "scbdb-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
chrono.workspace = true
rust_decimal = { workspace = true }
scbdb-core = { path = "../scbdb-core" }
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
