[package]
name = "scbdb-profiler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scbdb-core = { path = "../scbdb-core" }
scbdb-db = { path = "../scbdb-db" }
chrono.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
sha2.workspace = true
uuid.workspace = true
