[package]
name = "scbdb-scraper"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
rand.workspace = true
reqwest.workspace = true
regex.workspace = true
scbdb-core = { path = "../scbdb-core" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
wiremock.workspace = true
serde_json.workspace = true
