[package]
name = "scbdb-sentiment"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
scbdb-core = { path = "../scbdb-core" }
percent-encoding.workspace = true
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
quick-xml = { workspace = true, features = ["serialize"] }
sha2.workspace = true
regex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock.workspace = true
