[package]
name = "scbdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "scbdb-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
scbdb-core = { path = "../scbdb-core" }
scbdb-db = { path = "../scbdb-db" }
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
