[package]
name = "scbdb-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "scbdb-server"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
scbdb-core = { path = "../scbdb-core" }
scbdb-db = { path = "../scbdb-db" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
